# OpenFace-Gastronomy

./: CMakeLists.txt
exe/DemoMulti/: CMakeLists.txt  DemoMulti.cpp  FaceLandmarkVidMulti.cpp  FaceLandmarkVidMulti.vcxproj
exe/DemoSingle/: CMakeLists.txt  DemoSingle.cpp  DemoSingle.vcxproj
exe/FaceLandmarkVid/: FaceLandmarkVid.cpp
exe/FaceLandmarkVidMulti/: FaceLandmarkVidMulti.cpp
exe/HRI_Classifier/: HRI_Classifier.cpp
lib/local/Utilities/: CMakeLists.txt  Utilities.vcxproj  Utilities.vcxproj.filters
lib/local/Utilities/include/: FeatureLog.h  GastroViz.h
lib/local/Utilities/src/: FeatureLog.cpp  GastroViz.cpp
